--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'io.springfox:springfox-swagger2:2.8.0'
+	implementation 'io.springfox:springfox-swagger-ui:2.8.0'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    
     testCompile "org.mockito:mockito-core:1.+"
     compile ('com.fasterxml.jackson.core:jackson-databind:2.9.8')
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
